--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#menu">Menu</a></li>
+      <li><a href="#menu">Testing bruv</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
