--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant Menu</title>
+  <meta name="description" content="Authentieke Italiaanse gerechten in een gezellige sfeer bij Avenida in Borgerhout">
+  <title>Restaurant Avenida - Italiaanse keuken in Borgerhout</title>
   <link rel="stylesheet" href="css/styles3.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -32,10 +33,10 @@
       <button class="category-btn" data-category="salades">Salades</button>
       <button class="category-btn" data-category="soep">Soep</button>
       <button class="category-btn" data-category="pizza">Pizza's</button>
-      <button class="category-btn" data-category="kinderschotel">Kinderschotel's</button>
-      <button class="category-btn" data-category="hoofdgerechten">Warme schotel's</button>
+      <button class="category-btn" data-category="kinderschotel">Kinderschotels</button>
+      <button class="category-btn" data-category="hoofdgerechten">Warme schotels</button>
       <button class="category-btn" data-category="pita">Pita broodjes</button>
-      <button class="category-btn" data-category="pasta">Pasta's&Lasagna</button>
+      <button class="category-btn" data-category="pasta">Pasta & Lasagna</button>
       <button class="category-btn" data-category="desserts">Desserts</button>
       <button class="category-btn" data-category="dranken">Dranken</button>
       <button class="category-btn" data-category="extra">Extra's</button>
@@ -48,9 +49,11 @@
 
   <section id="contact" class="contact-section">
     <h2>Contact</h2>
-    <p>Adres: Turnhoutsebaan 9, 2140 borgerhout</p>
-    <p>Telefoon: 0486719226</p>
-    <p>Open: Dinsdag - Zondag, 16:00 - 00:00</p>
+    <address>
+      <p>Adres: Turnhoutsebaan 9, 2140 Borgerhout</p>
+      <p>Telefoon: <a href="tel:0486719226">0486 71 92 26</a></p>
+      <p>Open: Dinsdag - Zondag, 16:00 - 00:00</p>
+    </address>
   </section>
 </main>
 
