--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <main>
   <section id="home" class="hero">
-    <h1>Welkom bij Avenida</h1>
+    <h1>Welkom bij Avenida HJDBHDCHVDHVHDV</h1>
     <p>Geniet van authentieke Italiaanse gerechten in een gezellige sfeer</p>
   </section>
 
